refactor: Split projects to core / examples.